theia apps change

--- a/theia-docker/Dockerfile
+++ b/theia-docker/Dockerfile
@@ -32,5 +32,7 @@ EXPOSE 3000
 ENV SHELL=/bin/bash \
     THEIA_DEFAULT_PLUGINS=local-dir:/home/theia/plugins
 ENV USE_LOCAL_GIT true
+RUN addgroup --gid 1024 rndemo
+RUN adduser theia rndemo
 USER theia
 ENTRYPOINT [ "node", "/home/theia/src-gen/backend/main.js", "/home/project", "--hostname=0.0.0.0" ]
